fix(styles): remove the scroll from main screen
I tried to fit everything in one screen to remove the scrollbar. This
makes the game experience better for player since they do not have to
scroll up and down to see the shipyard and the board.

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -8,7 +8,7 @@ html {
 #app {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
   font-family: 'Poppins', sans-serif;
   font-size: 0.75rem;
   font-weight: normal;
