--- a/src/components/gameHost/gameHost.scss
+++ b/src/components/gameHost/gameHost.scss
@@ -5,9 +5,4 @@
   background-color: variables.$overlay;
   text-align: center;
   border-bottom: 1px solid variables.$border;
-  position: sticky;
-  left: 0;
-  right: 0;
-  top: 0;
-  z-index: 1;
 }
