--- a/src/components/gameboard/gameboard.scss
+++ b/src/components/gameboard/gameboard.scss
@@ -2,7 +2,7 @@
 
 .gameboard {
   display: flex;
-  padding: 30px;
+  padding: 30px 0 ;
   flex: 1;
 
   section {
@@ -10,6 +10,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    
     gap: 20px;
 
     > .title {
